2003-04-24  Neil Booth  <neil@daikokuya.co.uk>

	* cpplex.c (cpp_token_len): Tighten up.
	(cpp_token_as_text): Need extra byte now.
	* cpplib.c (glue_header_name): Need extra 2 bytes.
	* cppmacro.c (cpp_macro_definition): Need extra byte.

2003-04-24  Alexander Kabaev <kan@FreeBSD.ORG>

	* config/sparc/sparc.md (umulsidi3, mulsidi3): Avoid using
	const_umulsidi3_sp32 and const_mulsidi3_sp32 on 64bit targets 
	where they might be not present. Use their _sp64 equivalent
	instead.

Thu Apr 24 20:42:12 CEST 2003  Jan Hubicka  <jh@suse.cz>

	* i386.md (cvtsi2sdq): Fix typo in previous patch.
	
2003-04-24  Krister Walfridsson  <cato@df.lth.se>

	* configure.in: Check whether mbstowcs works.
	* configure, config.in: Regenerate.
	* intl.c: Use HAVE_WORKING_MBSTOWCS.

2003-04-24  H.J. Lu <hjl@gnu.org>

	* config/ia64/ia64.c (ia64_init_builtins): Add si_ftype_pdi_di_di
	for __sync_bool_compare_and_swap_di for int return type.

	* config/ia64/ia64intrin.h (__sync_bool_compare_and_swap_di):
	Change return type to int.
	(__sync_bool_compare_and_swap): Likewise.

Thu Apr 24 16:55:26 CEST 2003  Jan Hubicka  <jh@suse.cz>

	* cfgbuild.c (make_edges):  Do not use next_nonnote_insn when
	looking for fallthru edge.

	* athlon.md (athlon-agu, athlon-store, athlon-fany, athlon-faddmul):
	Fix.
	(athlon-load2, athlon-store2, athlon-fpsched, athlon-fpload,
	athlon-fvector): New.
	(athlon_*): Revisit to match new optimization guide.
	* i386.c (ix86_adjust_cost):  Fix memory operand costs on Athlon/k8
	* i386.md (cvt??2?? patterns): Fix modes.
	(fistp patterns): Set modes.

	Accidentaly commited with my earlier reload patch:
	PR c/10308
	* reload.c (find_reloads_address_1): Reload plus at the place of
	index register.
	
2003-04-24  Nathan Sidwell  <nathan@codesourcery.com>

	New GCOV_TAG_FUNCTION layout
	* coverage.c (struct function_list): Replace name with ident.
	(struct counts_entry): Likewise.
	(fn_ident): New.
	(htab_counts_entry_hash, htab_counts_entry_eq,